Split controllers, routes & views. Added a controller so routes just define routes. Added test coverage

--- a/views/indexPage.pug
+++ b/views/indexPage.pug
@@ -1,1 +1,7 @@
 h1 Palindrome Finder
+
+form(action="/" method="POST")
+  label(for="palindrome") Please enter a word
+  <br />   
+  textarea(name="palindrome")
+  input(type="submit" value="Submit")
