Created functionality for adding a non-palindrome word and return a new page with False on it

--- a/views/indexPage.pug
+++ b/views/indexPage.pug
@@ -1,7 +1,7 @@
 h1 Palindrome Finder
 
 form(action="/" method="POST")
-  label(for="palindrome") Please enter a word
+  label(for="palindrome") Please enter a string
   <br />   
-  textarea(name="palindrome")
+  input(name="palindrome")
   input(type="submit" value="Submit")
