Page created for a list of palindromes

--- a/views/indexPage.pug
+++ b/views/indexPage.pug
@@ -5,3 +5,6 @@ form(action="/" method="POST")
   <br />   
   input(name="palindrome")
   input(type="submit" value="Submit")
+    
+a(href="/palindromes") Check out the Palindromes
+  
